# reviro_intership_back_teamB

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  conf.py  docker-compose.yml  entrypoint.sh  main.py  manage.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
admin/: auth.py  course.py  group.py  lesson.py  user.py
alembic/: env.py
alembic/versions/: 00dcf66c9e47_merge_heads.py  08bfaece413a_homeworks_to_homework.py  0c58d06fe70d_changes_in_deletes.py  100b415b1687_payment_check.py  13ef4330d3e4_payment_detail_group_fix.py  161457747548_some_changes_in_homework_model.py  1d35e66d1554_migration.py  1d5b5840845d_models_were_added.py  26729c51055a_models_were_added.py  (+37 more)
api/: auth.py  course.py  enrollment.py  export.py  finance.py  group.py  lesson.py  lesson_attendance.py  payment.py  permissions.py  routers.py  shedule.py  user.py  utils.py
db/: database.py  dbbase.py  models.py  schemas.py  types.py
minio-deploy/: Dockerfile  minio_policy.json
models/: __init__.py  course.py  enrollment.py  group.py  lesson.py  payment.py  user.py
schemas/: course.py  enrollment.py  group.py  lesson.py  pagination.py  payment.py  shedule.py  user.py
tests/: conftest.py  test_auth.py  test_course.py  test_enrollment.py  test_group.py  test_lesson.py  test_payment.py  test_placeholder.py  test_shedule.py  test_stripe.py  test_u_attendance.py  test_u_auth.py  test_user.py  utils.py
utils/: __init__.py  checks_filters.py  date_time_utils.py  ext_and_size_validation_file.py  minio_client.py  password_utils.py  security.py  smtp_client.py
(+51 files in other folders)
