[project]
name = "reviro-intership"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "autopep8>=2.3.2",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]
