[project]
name = "reviro-intership"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.16.1",
    "anyio>=4.9.0",
    "apscheduler>=3.11.0",
    "async-factory-boy>=1.0.1",
    "asyncpg>=0.30.0",
    "autopep8>=2.3.2",
    "black>=25.1.0",
    "factory-boy>=3.3.3",
    "fastapi-filter>=2.0.1",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.4.1",
    "python-dateutil>=2.9.0.post0",
    "python-decouple>=3.8",
    "setuptools>=80.9.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]
